--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-fastapi
-uvicorn
-selenium
-webdriver-manager
-numpy
-requests
-overpy
-folium
-geopy
-jinja2
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+selenium==4.15.2
+webdriver-manager==4.0.1
+numpy==1.24.3
+requests==2.31.0
+overpy==0.7.0
+folium==0.14.0
+geopy==2.4.0
+jinja2==3.1.2
+python-multipart==0.0.6
