--- a/vercel.json
+++ b/vercel.json
@@ -12,11 +12,21 @@
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "app.py"
     }
   ],
   "env": {
-    "PYTHON_VERSION": "3.12"
+    "PYTHON_VERSION": "3.11",
+    "VERCEL": "1"
+  },
+  "functions": {
+    "app.py": {
+      "maxDuration": 30
+    }
   }
 }
