--- a/vercel.json
+++ b/vercel.json
@@ -25,8 +25,12 @@
     "VERCEL": "1"
   },
   "functions": {
-    "app.py": {
+    "api/**/*.py": {
       "maxDuration": 30
+    },
+    "*.py": {
+      "maxDuration": 30,
+      "includeFiles": "*.csv"
     }
   }
 }
