--- a/requirements-local.txt
+++ b/requirements-local.txt
@@ -3,4 +3,7 @@ uvicorn[standard]==0.24.0
 requests==2.31.0
 jinja2==3.1.2
 python-multipart==0.0.6
-overpy==0.7
+selenium==4.15.2
+webdriver-manager==4.0.1
+pandas==2.1.3
+numpy==1.24.3
